Fix Login Btn on IE

--- a/app/scripts/home/styles/home.styl
+++ b/app/scripts/home/styles/home.styl
@@ -1,21 +1,24 @@
 @import 'nib'
 
+.ie
+  position relative
+  top 50px
+
 .btn-block
   width 100%
 
 .auth-sm
- margin-bottom -4px !important
- display block !important
+  margin-bottom -4px !important
+  display block !important
 
 .img-editor
-    display inline-block
-    width 56px
-    height 56px
+  display inline-block
+  width 56px
+  height 56px
 
 .img-editor-container
-     width 56px
-     height 56px
-
+  width 56px
+  height 56px
 
 /**********************
  =ad
@@ -24,15 +27,16 @@
   background: url("../img/ad/atru.jpg") 0 0 no-repeat;
   width 230px
   height 100px
+
 /**********************
  =footer
 ***********************/
 .text-footer
- display block
- font-size 13px
- line-height 16px
+  display block
+  font-size 13px
+  line-height 16px
 
- @media screen and (max-width: 992px)
+@media screen and (max-width: 992px)
   font-size 11px
 
 
